lab1/Test/L1-A-11-47.cmm
struct {
  int JY1xUc2 ;float 
  struct _o6qXUgQ0AXiq {
    int kz3caUOvRtY_ 
  }Dr3mlJuH ;
. }PlSqeupr7BXW8 , G 

;
return float ;
int ugmSpeRwpTAmiH ( ) {
  struct hcGaa hCEKXXk [ 1014737420 ] , Tv79 = F_VdUPOcF7Bt 
    || GtIJPGxF != LfY6g2VjuBb8kSOkGS + - YAZQUvi0Wzl 
    [ mcTak9jVoUH08fMgo8S = OCTN = fiWh1i2 && sbDWuomdp 
    == KSR9i - Z8U2WmU7DfcnWQ / ! ! rVQX ( FoUUy7wd354W 
    , QoZfz4CL3kV06 > ( GlMekec4stzERIeE1 && ffyzHNjTaxG1EKWoKY 
    >= szIyZb + - ( pcDujgvWzt || amTDkzaxXn94BBQ5n2l 
    && JVIBm9rAcJPjT < ILXqJeEFXjU2 / ( PAz8jFP_81hs38Efqre 
    && C3OU2XfmJBn + ! - lMZ7B5fgeGa9Kmyi ( ymAJJQ8WJ_UVedga_R 
    = x0D4kDu5f <= Lf0uorKZPlo_ ) - - ) + NxTI6o4Dt4q1Emyd6 
    . ZKM6HLXIYUc ) ) . womAmvAhF / ! Jsnr * - ! - - ! 
    1353078355.545894438 * 1302247427 * IvkvRkpxRy ( ) 
    . RJlmuMZFl8m5zYD9ZQq ) ] ;
}
int ;
int Z int FVO1oQhu , int L39lNgRwiiB ) {
  if ( AkkChsA XVCfqgo2pRr8pffc )   x2f_WWlA5c7pnCTnCLa 
    ;
else   if ( n8g )   EhXo83Z3MSX ;


  if ( hbEu3   return e ;
else   while ( ebD1_O7 == ) {
  }

}
